[package]
name = "rust-for-told"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
rustc-serialize = "0.3.24"
tokio = { version = "1.20.1", features = ["full"] }
